Fixing issues with overflow on smaller screens + adding fade to logo

--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -1,5 +1,9 @@
 #v2 {
   color: white;
+  // display:flex;
+  // flex-direction: column;
+  // width: 100%;
+  overflow: hidden;
 
   h1 {
     font-family: 'Geist';
